# hiremindai-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260625_0001_create_users.py
app/: main.py
app/agents/: __init__.py  ats_optimizer.py  ats_scorer.py  base.py  company_intelligence.py  cover_letter.py  final_validator.py  grammar_checker.py  hallucination_guard.py  interview_generator.py  jd_parser.py  llm.py  project_ranker.py  recruiter_email.py  registry.py  resume_parser.py  resume_writer.py  reviewer.py  self_reflection.py  skill_matcher.py
app/ai/: llm.py  vector_store.py
app/ai/workflows/: candidate_screening.py
app/api/v1/: router.py
app/api/v1/routes/: agents.py  auth.py  company.py  dashboard.py  files.py  health.py  history.py  job.py  match.py  public_actions.py  resume.py  users.py  workflows.py
app/core/: config.py  deps.py  security.py
app/db/: session.py
app/embeddings/: provider.py
app/models/: user.py
app/prompts/: candidate_screening.py
app/repositories/: users.py
app/schemas/: agents.py  auth.py  public.py  workflow.py
app/services/: agents.py  auth.py  public_store.py  workflows.py
app/workflows/: candidate_screening.py  resume_optimization.py
hiremindai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_all_endpoints.py  test_auth_and_users.py  test_health.py
